# reneel-utils

./: .dockerignore  Dockerfile  Makefile  README.md  requirements.txt  setup.cfg
data/: karate.toml
docs/: README.md
reneelutil/: README.md  data.py  format_edgelist.py  run_reneel.py  util.py
src/: run_reneel.py
