[metadata]
name = src
description = Workflow for network analysis using reneel
author = Kunin Lab
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Development Status :: 1 - Planning
    Intended Audience :: Mathematics/Research


[options]
packages =
    src
python_requires = >=3.10
package_dir = 
    =.